# assignment-i

./: README.md  iwansusanto.db  pyproject.toml
alembic/: env.py
alembic/versions/: 08bdea6fdaeb_initial_tables.py
app/: main.py
app/core/: setting.py
app/models/: engine.py  tabungan.py
app/router/: tabungan.py
app/schema/: tabungan.py
